cabal-version: 2.2
name:
  ring-buffers
version:
  0.1
synopsis:
  mutable ring buffers with atomic updates in GHC Haskell
description:
  mutable ring buffers with atomic updates in GHC Haskell, using the contiguous api internally to provide multiple array backends
homepage:
  https://github.com/chessai/ring-buffers
bug-reports:
  https://github.com/chessai/ring-buffers/issues
license:
  BSD-3-Clause
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  2019 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    RingBuffers.Internal

    RingBuffers.Lifted
    RingBuffers.Unlifted
    RingBuffers.Unboxed
  other-modules:
    Prelude
  build-depends:
    , base >= 4.10.1 && < 4.13
    , contiguous >= 0.3
    , primitive >= 0.6.4
    , semirings >= 0.3
  mixins:
    base hiding (Prelude)
  ghc-options:
    -Wall
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/ring-buffers.git
